@@ -1,2 +1,4 @@
 sqldir = $(pkgdatadir)/sql
-dist_sql_DATA = spv-schema.sql
+dist_sql_DATA = \
+	spv-schema.sql \
+	spv-schema-update-0.7.0.sql
